# KitchnSpy

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.py  start_worker.bat  windows_celery_worker.bat
app/: main.py
app/api/: prices.py  products.py  tasks.py
app/core/: exceptions.py  utils.py
app/core/data/: validation.py
app/core/database/: database.py  mongo_gateway.py  products.py  validation.py
app/core/database/validation/: product.py  subscriber.py  subscription.py
app/core/services/: exceptions.py  price_change.py  scraper.py
app/core/services/notifications/: email.py  notifications.py
app/crud/: crud.py  history.py  prices.py  products.py  scrape.py  subscribers.py  subscription.py
app/data/: products.py  validation.py
app/database/: conn.py  db_logging.py
app/domain/price_logs/: utils.py
app/domain/price_logs/services/: price_change.py  price_log_service.py
app/domain/products/: schema.py
app/domain/products/services/: product_service.py
app/infra/: config.py  middleware.py
app/infra/db/adapters/: base_adapter.py  (+5 more)
app/infra/email/: email_config.py
app/infra/queues/: celery_app.py  enqueue.py  example.py  worker.py
app/infra/scraping/: kitchenaid_scraper.py
app/infra/services/: enums.py  task_monitor.py
app/infrastructure/: log_service.py
app/logs/: app.log.2025-04-23  app.log.2025-04-24  app.log.2025-04-25  app.log.2025-04-26  e
app/routers/: prices.py  products.py  scraping.py  subscribers.py  subscription.py
app/services/: scraper.py
app/shared/: exceptions.py  serializer.py
docs/: tasks.md
(+20 files in other folders)
